# silly-smells

./: .gitignore  README.md  pyproject.toml
notebooks/: smell_dataset_exploration.ipynb
silly_smells/: fingerprint_manipulations.py  msp_retriever.py  pubchem_retriever.py
